# Personal-Expense-and-financial-planning

./: app.py  budget_vs_forecast.csv  expense_forecast_next_12_months.csv  expense_forecast_next_12_months_by_category.csv  model_performance_summary.csv  pefp.ipynb  pefp2.ipynb  pefp_final.ipynb  pyproject.toml  savings_projection.csv
datasets/: expense_transactions_data.csv  monthly_category_expenses_data.csv
