[project]
name = "personal-expense-and-financial-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "tensorflow",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "plotly",
    "yfinance",
    "statsmodels",
    "prophet",
]
